--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@vue/composition-api": "^1.0.0-rc.5",
     "core-js": "^3.9.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.12",
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
